Added a dog imge and a few more elements

--- a/Test.html
+++ b/Test.html
@@ -1,3 +1,13 @@
-<h1>Hey. I Love you</h1>
-<p>Hey. I dont love you</p>
-<a href="https://google.com" target="_blank" title="Let's go">Click this link</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Test boy</title>
+  </head>
+  <body>
+    <h1>Hey. I Love you</h1>
+    <p>Hey. I <b>dont</b> love you</p>
+    <p>My name is:<br>Big Bommba</p>
+    <a href="https://google.com" target="_blank" title="Let's go">Click this link</a>
+    <img src="img/dog.jpeg" alt="">
+  </body>
+</html>
