Changed image source

--- a/Test.html
+++ b/Test.html
@@ -8,6 +8,6 @@
     <p>Hey. I <b>dont</b> love you</p>
     <p>My name is:<br>Big Bommba</p>
     <a href="https://google.com" target="_blank" title="Let's go">Click this link</a>
-    <img src="img/dog.jpeg" alt="">
+    <img src="https://kajabi-storefronts-production.global.ssl.fastly.net/kajabi-storefronts-production/themes/487597/settings_images/auvDwLb1SB6h139PWpsD_dogs.jpg" alt="">
   </body>
-</html> 
+</html>
